--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/QuadVlieg/NodeQuad.git"
   },
-  "author": "Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com> (http://lieuwex.github.io/)",
+  "author": "Team QuadVlieg (https://github.com/QuadVlieg)",
   "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/QuadVlieg/NodeQuad/issues"
