--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/QuadVlieg/NodeQuad",
   "dependencies": {
+    "debug": "^2.1.0",
     "express": "^4.10.2",
     "express-handlebars": "^1.1.0",
     "lodash": "^2.4.1",
